Test less verbose unified logging patterns.